--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,10 @@
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
+        "laravel/scout": "^8.6",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^2.1"
+        "laravel/ui": "^2.1",
+        "teamtnt/laravel-scout-tntsearch-driver": "^11.2"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
